# sfmtool

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  mkdocs.yml  pixi.toml  pyproject.toml  zensical.toml
crates/camrig-format/: Cargo.toml
crates/camrig-format/src/: archive_io.rs  lib.rs  pattern.rs  read.rs  tests.rs  types.rs  verify.rs  write.rs
crates/camrig-format/src/pattern/: tests.rs
crates/matches-format/: Cargo.toml
crates/matches-format/src/: archive_io.rs  lib.rs  read.rs  tests.rs  types.rs  verify.rs  write.rs
crates/sfm-explorer/: Cargo.toml  build.rs
crates/sfm-explorer/examples/: win32_directmanipulation.rs  winit_directmanipulation.rs  winit_wgpu_directmanipulation.rs
crates/sfm-explorer/src/: app.rs  colormap.rs  dock.rs  image_browser.rs  image_detail.rs  lib.rs  main.rs  point_track_detail.rs  state.rs
crates/sfm-explorer/src/image_detail/: input.rs  mod.rs  overlay.rs
crates/sfm-explorer/src/platform/: mod.rs  windows.rs
crates/sfm-explorer/src/scene_renderer/: auto_point_size.rs  compass.rs  distorted_mesh.rs  gpu_types.rs  mod.rs  readback.rs  render.rs  sizing.rs  uniforms.rs  upload.rs
crates/sfm-explorer/src/shaders/: bg_image_distorted.wgsl  distorted_quad.wgsl  edl.wgsl  frustum.wgsl  image_quad.wgsl  patch.wgsl  points.wgsl  target_indicator.wgsl  track_ray.wgsl
crates/sfm-explorer/src/viewer_3d/: camera.rs  input.rs  mod.rs  overlay.rs
crates/sfm-explorer/tests/: ui_basic.rs
crates/sfmr-colmap/: Cargo.toml
crates/sfmr-colmap/src/: lib.rs
crates/sfmr-colmap/src/colmap_db/: mod.rs  read.rs  tests.rs  types.rs  write.rs
crates/sfmr-colmap/src/colmap_io/: mod.rs  read.rs  tests.rs  types.rs  write.rs
crates/sfmr-format/: Cargo.toml
crates/sfmr-format/src/: archive_io.rs  depth_stats.rs  lib.rs  read.rs  tests.rs  types.rs  verify.rs  write.rs
crates/sfmr-format/src/depth_stats/: tests.rs
crates/sfmtool-core/: Cargo.toml
crates/sfmtool-core/benches/: kdtree_forest.rs  optical_flow.rs  patch_render.rs
crates/sfmtool-core/src/: camera.rs  camera_intrinsics.rs  consensus_atlas.rs  distortion.rs  epipolar.rs  filter.rs  find_infinity.rs  frustum.rs  image_pair_graph.rs  infinity.rs  lib.rs  patch_cloud.rs  patch_normal_refine.rs  per_spherical_tile_source_stack.rs  photometric_ransac.rs  point_correspondence.rs  reconstruction.rs  rectification.rs  remap.rs  rigid_transform.rs  rot_quaternion.rs  rotation.rs  se3_transform.rs  spatial.rs  sphere_points.rs  spherical_tile_rig.rs  transform.rs  triangulation.rs  viewing_angle.rs  warp_map.rs
crates/sfmtool-core/src/alignment/: kabsch.rs  mod.rs  ransac.rs
crates/sfmtool-core/src/analysis/: image_pair_graph.rs  mod.rs  point_inspect.rs
crates/sfmtool-core/src/camera/: distortion.rs  epipolar.rs  frustum.rs  intrinsics.rs  mod.rs  rectification.rs  remap.rs  viewport.rs  warp_map.rs
crates/sfmtool-core/src/distortion/: kernels.rs  tests.rs
crates/sfmtool-core/src/epipolar/: tests.rs
crates/sfmtool-core/src/feature_match/: descriptor.rs  geometric_filter.rs  mod.rs  polar.rs  sweep.rs
crates/sfmtool-core/src/features/: mod.rs
crates/sfmtool-core/src/frustum/: tests.rs
crates/sfmtool-core/src/geometry/: absolute_pose.rs  affine_factorization.rs  batch_resection.rs  bundle_adjust.rs  convention.rs  epipolar_estimation.rs  focal_vote.rs  homography_estimation.rs  mod.rs  polynomial.rs  pose_refine.rs  pose_verification.rs  reconstruction_growth.rs  reprojection.rs  resect_translation.rs  rigid_transform.rs  rot_quaternion.rs  rotation.rs  rotation_init.rs  se3_transform.rs  transform.rs  viewing_angle.rs
crates/sfmtool-core/src/image_pair_graph/: tests.rs
crates/sfmtool-core/src/infinity/: convert.rs  discover.rs
crates/sfmtool-core/src/kdforest/: mod.rs  search.rs
crates/sfmtool-core/src/optical_flow/: dis.rs  interp.rs  mod.rs  pyramid.rs  variational.rs
crates/sfmtool-core/src/patch/: cloud.rs  keypoint_localize.rs  keypoint_subpixel.rs  mod.rs  normal_refine.rs  patch_normal_refine.rs  view_selection.rs
crates/sfmtool-core/src/patch_cloud/: tests.rs
crates/sfmtool-core/src/patch_normal_refine/: fronto_cache.rs  prof.rs  tests.rs
crates/sfmtool-core/src/per_spherical_tile_source_stack/: tests.rs
crates/sfmtool-core/src/photometric_ransac/: tests.rs
crates/sfmtool-core/src/reconstruction/: data.rs  edit.rs  embed.rs  filter.rs  image_pair_graph.rs  mod.rs  point_correspondence.rs  point_inspect.rs  tests.rs
crates/sfmtool-core/src/rectification/: tests.rs
crates/sfmtool-core/src/se3_transform/: tests.rs
crates/sfmtool-core/src/sift/: descriptor.rs  detect.rs  mod.rs  scale_space.rs  simd.rs  tests.rs
crates/sfmtool-core/src/spatial/: tests.rs
crates/sfmtool-core/src/spherical/: consensus_atlas.rs  mod.rs  per_spherical_tile_source_stack.rs  per_tile_source_stack.rs  photometric_ransac.rs  sphere_points.rs  tile_rig.rs
crates/sfmtool-core/src/spherical_tile_rig/: camrig.rs  tests.rs
crates/sfmtool-py/: Cargo.toml
crates/sfmtool-py/src/: helpers.rs  lib.rs  py_analysis.rs  py_camera_intrinsics.rs  py_camrig_io.rs  py_cluster_match.rs  py_colmap_binary.rs  py_colmap_db.rs  py_consensus_atlas.rs  py_descriptor_match.rs  py_epipolar.rs  py_gui.rs  py_image.rs  py_image_match.rs  py_image_pair_graph.rs  py_kdforest.rs  py_kdtree.rs  py_matches_io.rs  py_optical_flow.rs  py_patch_cloud.rs  py_per_spherical_tile_source_stack.rs  py_photometric_ransac.rs  py_progress.rs  py_range_expr.rs  py_rigid_transform.rs  py_rot_quaternion.rs  py_se3_transform.rs  py_sfmr_io.rs  py_sfmr_reconstruction.rs  py_sift.rs  py_sift_io.rs  py_sphere_points.rs  py_spherical_tile_rig.rs  py_sweep_match.rs  py_triangulation.rs  py_warp_map.rs  recon_clone.rs
crates/sfmtool-py/src/analysis/: core.rs  epipolar.rs  image_pair_graph.rs  mod.rs  triangulation.rs
crates/sfmtool-py/src/flow/: mod.rs  optical.rs  warp.rs
crates/sfmtool-py/src/geometry/: mod.rs  (+17 more)
crates/sift-format/: Cargo.toml
crates/sift-format/src/: archive_io.rs  lib.rs  read.rs  tests.rs  types.rs  verify.rs  write.rs
(+717 files in other folders)
