# Copyright The SfM Tool Authors
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "sfmtool"
version = "0.2"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Fun with Structure from Motion"
dependencies = [
    "click",
    "deadline",
    "numpy",
    "opencv-python-headless",
    "openjd-model",
    "pycolmap",
    "xxhash",
]

[project.scripts]
sfm = "sfmtool.cli:main"

[dependency-groups]
test = ["pytest", "ruff"]
dev = ["ipython", {include-group = "test"}]

[tool.maturin]
manifest-path = "crates/sfmtool-py/Cargo.toml"
python-source = "src"
module-name = "sfmtool._sfmtool"

[tool.pytest.ini_options]
testpaths = ["tests"]
