# Copyright The SfM Tool Authors
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "sfmtool"
version = "0.2"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Fun with Structure from Motion"
dependencies = [
    "click",
    "deadline",
    "numpy",
    "opencv-python-headless",
    "pycolmap",
    "xxhash",
]

[project.scripts]
sfm = "sfmtool.cli:main"

[dependency-groups]
test = ["pytest", "ruff"]
dev = ["ipython", {include-group = "test"}]

[tool.maturin]
manifest-path = "crates/sfmtool-py/Cargo.toml"
python-source = "src"
module-name = "sfmtool._sfmtool"

[tool.pytest.ini_options]
testpaths = ["tests"]
# tee-sys avoids fd-level dup that breaks Click CliRunner on Windows + Python 3.14
# (pytest's default FDCapture corrupts Click's preserved fileno; see pytest #2465 / #13720).
addopts = "--capture=tee-sys"

[tool.coverage.run]
# parallel + multiprocessing tracks code that runs inside ProcessPoolExecutor
# workers (e.g. merge.pose_refinement._refine_single_camera_pose). pytest-cov
# auto-instruments the spawned interpreters from this config alone — no
# COVERAGE_PROCESS_START env var needed (and setting it triggers a numpy
# multi-init crash on Python 3.14).
parallel = true
concurrency = ["multiprocessing"]
source = ["sfmtool"]
