# Copyright The SfM Tool Authors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "matches-format"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Read/write .matches file format for feature match correspondences"

[dependencies]
ndarray = "0.16"
bytemuck = { version = "1.14", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "2"
