# Copyright The SfM Tool Authors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sfmr-colmap"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "COLMAP format interoperability for sfmr reconstructions"

[dependencies]
sfmr-format = { path = "../sfmr-format" }
matches-format = { path = "../matches-format" }
ndarray = "0.16"
rusqlite = { version = "0.34", features = ["bundled"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
