# Copyright The SfM Tool Authors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sfmtool-core"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Core data structures and algorithms for sfmtool"

[features]
default = ["gpu"]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dependencies]
half = "2"
nalgebra = "0.35"
ndarray = "0.17"
kiddo = "5"
rayon = "1.12"
rand = "0.10"
rand_distr = "0.6"
serde_json = "1"
sfmr-format = { path = "../sfmr-format" }
sift-format = { path = "../sift-format" }
camrig-format = { path = "../camrig-format" }

# GPU compute (optional)
wgpu = { version = "29", features = ["dx12", "vulkan"], optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.25", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.8", features = ["html_reports"] }
image = "0.25"
# Used by the .sfmr v4→v5 upgrade-on-load tests to author version-4 fixture
# bytes (rewriting the archive's metadata.json.zst version field).
zip = { version = "8", default-features = false, features = ["deflate"] }
zstd = "0.13"

[[bench]]
name = "optical_flow"
harness = false

[[bench]]
name = "kdtree_forest"
harness = false

[[bench]]
name = "patch_render"
harness = false
