# Copyright The SfM Tool Authors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sfmtool-py"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for sfmtool core functionality"

[lib]
name = "_sfmtool"
crate-type = ["cdylib"]

[dependencies]
sfmtool-core = { path = "../sfmtool-core" }
sift-format = { path = "../sift-format" }
sfmr-format = { path = "../sfmr-format" }
sfmr-colmap = { path = "../sfmr-colmap" }
matches-format = { path = "../matches-format" }
pyo3 = { version = "0.26", features = ["extension-module"] }
numpy = "0.26"
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.33"
chrono = "0.4"
pathdiff = "0.2"
