# Copyright The SfM Tool Authors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sfmtool-py"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for sfmtool core functionality"

[lib]
name = "_sfmtool"
crate-type = ["cdylib"]

[dependencies]
sfmtool-core = { path = "../sfmtool-core" }
sift-format = { path = "../sift-format" }
sfmr-format = { path = "../sfmr-format" }
sfmr-colmap = { path = "../sfmr-colmap" }
matches-format = { path = "../matches-format" }
camrig-format = { path = "../camrig-format" }
pyo3 = { version = "0.29", features = ["extension-module"] }
rayon = "1.12"
image = "0.25"
numpy = { version = "0.29", features = ["half"] }
half = "2"
ndarray = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.35"
chrono = "0.4"
pathdiff = "0.2"
sfm-explorer = { path = "../sfm-explorer" }
openjd-expr = "0.1.2"

[[bin]]
name = "launch-sfm-explorer"
