# Copyright The SfM Tool Authors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sift-format"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Read/write .sift file format for SIFT feature descriptors"

[dependencies]
ndarray = "0.16"
bytemuck = { version = "1.14", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "2"

[dev-dependencies]
approx = "0.5"
